network and tests