@@ -1,166 +1,262 @@
+/**
+ * To run this test class, the following JVM parameters need to be added:
+ * (The current version of ByteBuddy does not support Java 23 by default)
+ * --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+ * --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+ * --add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+ * --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+ * -Dnet.bytebuddy.experimental=true
+ * -Djdk.module.illegalAccess=deny
+ */
 package com.island.network;
 
+import com.island.model.Room;
+import com.island.model.adventurers.Player;
+import com.island.model.card.Card;
+import com.island.model.island.Island;
+import com.island.model.island.Position;
+import com.island.model.island.Tile;
+import com.island.model.treasure.TreasureType;
 import com.island.controller.GameController;
-import com.island.model.*;
-import com.island.view.ActionLogView;
-import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
+import org.testfx.framework.junit5.ApplicationExtension;
+import org.testfx.api.FxToolkit;
 
-import java.net.SocketException;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.concurrent.ConcurrentHashMap;
 
-import static org.junit.jupiter.api.Assertions.fail;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.*;
 
 /**
- * RoomController的单元测试类
+ * Test classes for RoomController
+ * Use the Application Extension provided by TestFX to manage the JavaFX environment
  */
-@DisplayName("RoomController单元测试")
+@ExtendWith(ApplicationExtension.class)
 class RoomControllerTest {
-
-    @Mock
-    private GameController gameController;
+    private RoomController roomController;
 
     @Mock
     private Room room;
-
+    
     @Mock
-    private ActionLogView logView;
+    private MessageHandler messageHandler;
+    
+    @Mock
+    private Island island;
+    
+    @Mock
+    private Player player;
+    
+    @Mock
+    private Tile tile;
+    
+    @Mock
+    private GameController gameController;
 
-    private RoomController roomController;
-    private AutoCloseable mocks;
+    @BeforeAll
+    public static void setupClass() throws Exception {
+        // Register the main stage using the methods provided by TestFX
+        FxToolkit.registerPrimaryStage();
+    }
 
     @BeforeEach
-    void setUp() throws SocketException {
-        mocks = MockitoAnnotations.openMocks(this);
+    void setUp() throws Exception {
+        // Initialize  mocks
+        MockitoAnnotations.openMocks(this);
         
-        // 设置基本的mock行为
-        when(room.getRoomId()).thenReturn("test-room");
-        when(room.getPlayers()).thenReturn(new ArrayList<>());
+        // Set basic mock behavior
+        when(room.getId()).thenReturn(1);
+        when(room.getCurrentProgramPlayer()).thenReturn(player);
+        when(room.getHostPlayer()).thenReturn(player);
+        when(player.getName()).thenReturn("TestPlayer");
+        when(gameController.isGameStart()).thenReturn(false);
+
+        // Manually injecting dependencies
+        roomController = new RoomController(room);
+        roomController.setMessageHandler(messageHandler);
+        roomController.setIsland(island);
+        roomController.setGameController(gameController);
         
-        roomController = new RoomController(gameController, room, logView);
+        // Configure default message processing behavior
+        doNothing().when(messageHandler).putUnconfirmedMessage(anyLong(), any());
+        doNothing().when(messageHandler).scheduleMessageRetry(anyLong());
     }
 
-    @AfterEach
-    void tearDown() throws Exception {
-        if (mocks != null) {
-            mocks.close();
-        }
-        if (roomController != null) {
-            roomController.shutdown();
-        }
-    }
-
+    /**
+     * Test handling join request when room is not full
+     */
     @Test
-    @DisplayName("测试玩家加入请求处理")
-    void testHandleJoinRequest() {
-        // 准备测试数据
-        String playerName = "testPlayer";
-        Player mockPlayer = mock(Player.class);
-        when(mockPlayer.getName()).thenReturn(playerName);
-        when(room.addPlayer(any(Player.class))).thenReturn(true);
+    void testHandleJoinRequest() throws Exception {
+        // Setup
+        String newPlayerName = "NewPlayer";
+        Message joinMessage = new Message(MessageType.PLAYER_JOIN, room.getId(), newPlayerName, true);  // Settings need to be confirmed
+        joinMessage.addExtraData("isRequest", true);
         
-        Message joinMessage = new Message(MessageType.PLAYER_JOIN, "test-room", playerName)
-            .addExtraData("username", mockPlayer);
+        // Simulate room status
+        List<Player> players = new ArrayList<>();
+        players.add(player);
+        when(room.getPlayers()).thenReturn(players);
+        when(room.isHost("TestPlayer")).thenReturn(true);
+        when(room.getCurrentProgramPlayer().getName()).thenReturn("TestPlayer");
+        when(gameController.isGameStart()).thenReturn(false);
 
-        // 执行测试
-        roomController.handleJoinRequest(joinMessage);
+        // Simulate message sending
+        doNothing().when(messageHandler).putUnconfirmedMessage(anyLong(), any());
+        when(messageHandler.getUnconfirmedMessages()).thenReturn(new ConcurrentHashMap<>());
 
-        // 验证结果
-        verify(room).addPlayer(any(Player.class));
-        verify(logView, atLeastOnce()).success(anyString());
+        // Execute
+        roomController.broadcast(joinMessage);
+
+        // Verify
+        verify(messageHandler).putUnconfirmedMessage(anyLong(), any());
     }
 
+    /**
+     * Test heartbeat update
+     */
     @Test
-    @DisplayName("测试游戏开始消息处理")
-    void testHandleGameStartMessage() {
-        // 准备测试数据
-        Player mockPlayer = mock(Player.class);
-        when(mockPlayer.getName()).thenReturn("testPlayer");
-        when(room.getPlayerByName(anyString())).thenReturn(mockPlayer);
-        when(room.getPlayers()).thenReturn(List.of(mockPlayer));
-        
-        Message startMessage = new Message(MessageType.GAME_START, "test-room", "system")
-            .addExtraData("username", "testPlayer");
-
-        // 执行测试
-        roomController.sendGameStartMessage(startMessage);
-
-        // 验证结果
-        verify(gameController).startGame(anyLong());
-    }
-
-    @Test
-    @DisplayName("测试玩家移动消息处理")
-    void testHandleMoveMessage() {
-        // 准备测试数据
-        Player mockPlayer = mock(Player.class);
-        Position targetPos = new Position(1, 1);
-        Message moveMessage = new Message(MessageType.MOVE_PLAYER, "test-room", "player")
-            .addExtraData("username", mockPlayer)
-            .addExtraData("position", targetPos);
-
-        // 设置mock行为
-        lenient().when(room.getPlayerByName(anyString())).thenReturn(mockPlayer);
-
-        // 执行测试
-        roomController.handleGameMessage(moveMessage);
-
-        // 验证结果
-        verify(logView, times(1)).log(contains("Processing message"));
-    }
-
-    @Test
-    @DisplayName("测试广播消息")
-    void testBroadcastMessage() {
-        // 准备测试数据
-        Message message = new Message(MessageType.UPDATE_ROOM, "test-room", "system");
-
-        // 执行测试
-        roomController.broadcast(message);
-
-        // 验证结果
-        verify(logView, atLeastOnce()).log(anyString());
-    }
-
-    @Test
-    @DisplayName("测试玩家心跳更新")
     void testUpdatePlayerHeartbeat() {
-        // 准备测试数据
-        String playerName = "testPlayer";
-
-        // 执行测试
-        roomController.updatePlayerHeartbeat(playerName);
-
-        // 验证结果 - 只需要验证方法被调用，因为updatePlayerHeartbeat只是更新内部状态
-        verify(logView, never()).error(anyString());
+        // Execute
+        roomController.updatePlayerHeartbeat("TestPlayer");
     }
 
+    /**
+     * Test sending treasure cards message
+     */
     @Test
-    @DisplayName("测试错误处理")
-    void testErrorHandling() {
-        // 准备测试数据
-        Message invalidMessage = new Message(MessageType.MOVE_PLAYER, "test-room", "player");
-        
-        // 设置mock行为，确保会抛出异常
-        MessageHandler mockMessageHandler = mock(MessageHandler.class);
-        doThrow(new RuntimeException("测试错误")).when(mockMessageHandler).handleMessage(any(Message.class));
-        
-        // 使用反射设置mockMessageHandler
-        try {
-            java.lang.reflect.Field messageHandlerField = RoomController.class.getDeclaredField("messageHandler");
-            messageHandlerField.setAccessible(true);
-            messageHandlerField.set(roomController, mockMessageHandler);
-        } catch (Exception e) {
-            fail("Failed to set mock message handler: " + e.getMessage());
-        }
+    void testSendDrawTreasureCardsMessage() throws Exception {
+        // Execute
+        roomController.sendDrawTreasureCardsMessage(2, player);
 
-        // 执行测试
-        roomController.handleGameMessage(invalidMessage);
+        // Verify
+        verify(messageHandler).putUnconfirmedMessage(anyLong(), any());
+    }
 
-        // 验证结果
-        verify(logView, atLeastOnce()).error(contains("测试错误"));
+    /**
+     * Test sending move message
+     */
+    @Test
+    void testSendMoveMessage() throws Exception {
+        // Setup
+        Position position = new Position(1, 1);
+        when(island.getTile(position)).thenReturn(tile);
+        when(tile.getName()).thenReturn("TestTile");
+
+        // Execute
+        roomController.sendMoveMessage(player, position);
+
+        // Verify
+        verify(messageHandler).putUnconfirmedMessage(anyLong(), any());
+    }
+
+    /**
+     * Test sending shore up message
+     */
+    @Test
+    void testSendShoreUpMessage() throws Exception {
+        // Setup
+        Position position = new Position(1, 1);
+        when(island.getTile(position)).thenReturn(tile);
+        when(tile.getName()).thenReturn("TestTile");
+
+        // Execute
+        roomController.sendShoreUpMessage(player, position);
+
+        // Verify
+        verify(messageHandler).putUnconfirmedMessage(anyLong(), any());
+    }
+
+    /**
+     * Test sending give card message
+     */
+    @Test
+    void testSendGiveCardMessage() throws Exception {
+        // Setup
+        Player receiver = mock(Player.class);
+        Card card = mock(Card.class);
+        when(card.getName()).thenReturn("TestCard");
+        when(receiver.getName()).thenReturn("Receiver");
+
+        // Execute
+        roomController.sendGiveCardMessage(player, receiver, card);
+
+        // Verify
+        verify(messageHandler).putUnconfirmedMessage(anyLong(), any());
+    }
+
+    /**
+     * Test sending helicopter move message
+     */
+    @Test
+    void testSendHelicopterMoveMessage() throws Exception {
+        // Setup
+        Position position = new Position(1, 1);
+        List<Player> players = new ArrayList<>();
+        players.add(player);
+        when(island.getTile(position)).thenReturn(tile);
+        when(tile.getName()).thenReturn("TestTile");
+
+        // Execute
+        roomController.sendHelicopterMoveMessage(players, player, position, 0);
+
+        // Verify
+        verify(messageHandler).putUnconfirmedMessage(anyLong(), any());
+    }
+
+    /**
+     * Test sending capture treasure message
+     */
+    @Test
+    void testSendCaptureTreasureMessage() throws Exception {
+        // Execute
+        roomController.sendCaptureTreasureMessage(player, TreasureType.EARTH_STONE);
+
+        // Verify
+        verify(messageHandler).putUnconfirmedMessage(anyLong(), any());
+    }
+
+    /**
+     * Test sending game over message
+     */
+    @Test
+    void testSendGameOverMessage() throws Exception {
+        // Execute
+        roomController.sendGameOverMessage("Game Over!");
+
+        // Verify
+        verify(messageHandler).putUnconfirmedMessage(anyLong(), any());
+    }
+
+    /**
+     * Test sending start game message
+     */
+    @Test
+    void testSendStartGameMessage() throws Exception {
+        // Setup
+        AtomicInteger waterLevel = new AtomicInteger(2);
+
+        // Execute
+        roomController.sendStartGameMessage(player, waterLevel);
+
+        // Verify
+        verify(messageHandler).putUnconfirmedMessage(anyLong(), any());
+    }
+
+    /**
+     * Test shutdown
+     */
+    @Test
+    void testShutdown() {
+        // Execute
+        roomController.shutdown();
     }
 } 
